# fabricatio

./: .coveragerc  .gitignore  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Justfile  Makefile  README.md  TEI_ROUTER_PLAN.md  build.rs  publish_subpackages.py  pyproject.toml  subpackages.py
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation_issue.md  feature_request.md  question.md
.github/workflows/: build-package.yaml  ruff.yaml  tests.yaml
crates/deck_loader/: Cargo.toml
crates/error-mapping/: Cargo.toml
crates/error-mapping/src/: lib.rs
crates/fabricatio-config/: Cargo.toml  README.md
crates/fabricatio-config/crates/macro_utils/: Cargo.toml
crates/fabricatio-config/crates/macro_utils/src/: lib.rs
crates/fabricatio-config/src/: config_loader.rs  configs.rs  lib.rs  secstr.rs
crates/fabricatio-constants/: Cargo.toml  README.md
crates/fabricatio-constants/src/: lib.rs
crates/fabricatio-logger/: Cargo.toml  README.md
crates/fabricatio-logger/src/: initializer.rs  lib.rs  logger.rs  renderer.rs
crates/fabricatio-router/: Cargo.toml
crates/fabricatio-router/src/: lib.rs
crates/fabricatio-stubgen/: Cargo.toml  README.md  build.rs
crates/fabricatio-stubgen/src/: main.rs
crates/macro-utils/: Cargo.toml
crates/mcp-manager/: Cargo.toml
crates/mcp-manager/src/: error.rs  lib.rs
crates/scanner/: Cargo.toml
crates/signify/: Cargo.toml
crates/tex-convertor/: Cargo.toml
crates/thryd/: Cargo.toml  README.md
crates/thryd/src/: cache.rs  connections.rs  constants.rs  error.rs  lib.rs  message.rs  model.rs  provider.rs  route.rs  tracker.rs  utils.rs
crates/thryd/src/deployment/: mod.rs
crates/thryd/src/models/: dummy.rs  mod.rs  openai.rs
crates/thryd/src/provider/: dummy.rs  mod.rs  openai.rs
crates/thryd/src/route/: mod.rs  retry.rs  tag.rs
crates/utils/: Cargo.toml
docs/: .gitignore  Makefile
docs/source/: architecture.rst  code-style.rst  concepts.rst  conf.py  configuration.rst  contributing.rst  development.rst  features.rst  index.rst  installation.rst  overview.rst  package-ecosystem.rst  rust-crates.rst  usage.rst  use-cases.rst  workflow-patterns.rst
examples/anki_deck/: .gitignore  deck_gen.py
examples/basics/: basic_workflow.py  hello_fabricatio.py  simple_chat.py
examples/correct/: correct.py  correct_loop.py
examples/diff/: diff.py
examples/extract_and_inject/: article_rag.py  ask.py  chunk_article.py  extract_and_inject.py
examples/extract_article/: extract.py
examples/generation/: .gitignore  article_rag.py  compose_song.py  extract.py  generate_diary.py  improve.py  multi_workflow_poem.py  structured_output.py  write_article.py  write_novel.py  write_outline.py  write_outline_corrected.py  write_poem.py
examples/integrations/: .gitignore  anki_deck_gen.py  bibtex_search.py  draft_ruleset.py
examples/llm_usages/: llm_usage.py
examples/make_a_rating/: rating.py
examples/make_diary/: commits.json  diary.py
examples/minor/: hello_fabricatio.py  write_a_poem.py
examples/novel/: .gitignore  novel.py
examples/propose_task/: propose.py
examples/rag/: .gitignore  chunk_and_inject.py  extract_and_inject.py  extract_article.py  rag_article_tweak.py  rag_qa.py  simple_rag.py
examples/rating/: rate_food.py
examples/review/: correct.py  correct_loop.py  diff_edit.py  review.py  review_censor.py  review_correct.py
examples/reviewer/: review.py
examples/rules/: draft_ruleset.py
examples/search_bibtex/: search.py
examples/simple_chat/: chat.py
examples/simple_rag/: simple_rag.py
examples/task_handle/: handle_task.py
examples/task_management/: .gitignore  llm_code_gen.py  propose_task.py  task_with_cancellation.py
examples/write_article/: article_rag.py  post_process.py  write_article.py
examples/write_outline/: write_outline.py  write_outline_corrected.py
examples/yue/: compose.py
python/fabricatio/: __init__.py  _rust.pyi  _rust_instances.py  config.py  core.py  decorators.py  journal.py  parser.py  rust.pyi  utils.py
python/tests/: integreted_tests.py  test_minor_integration.py
src/: bib_tools.rs  config.rs  downloaders.rs  event.rs  hbs_helpers.rs  lib.rs  templates.rs  typst_tools.rs  word_split.rs
src/fabricatio/: __init__.py  config.py  core.py  fs.py  journal.py  logger.py  parser.py  templates.py
src/fabrik/: __init__.py  config.py  logger.py
src/macro_utils/: Cargo.toml
src/tei_client/: Cargo.toml
src/tools/: Cargo.toml
templates/built-in/: allocate_image_budget.hbs  as_prompt.hbs  capable.hbs  chapter_requirement.hbs  chapter_summarization.hbs  chapter_summary_as_prompt.hbs  character_base_look.hbs  character_requirement.hbs  check_string.hbs  co_validation.hbs  code_snippet.hbs  create_json_obj.hbs  dependencies.hbs  diff.hbs  digest.hbs  dispatch_task.hbs  distill_skills.hbs  draft_rating_criteria.hbs  draft_rating_manual.hbs  draft_tool_usage_code.hbs  enrich_qa.hbs  extract.hbs  extract_criteria_from_reasons.hbs  extract_essence.hbs  extract_reasons_from_examples.hbs  fix_troubled_obj.hbs  fix_troubled_string.hbs  fulfill_prompt.hbs  generate_anki_card_back_side.hbs  generate_anki_card_front_side.hbs  generate_anki_card_template_generation_requirements.hbs  generate_anki_card_type.hbs  generate_csv_data.hbs  generate_header.hbs  generate_image_prompt.hbs  generate_outline.hbs  generate_topic_analysis.hbs  generic_string.hbs  illustration_constrain.hbs  illustration_selection_guideline.hbs  (+41 more)
tests/: conftest.py  test_actions.py  test_capabilities.py  test_config.py  test_core.py  test_decorators.py  test_emitter.py  test_events.py  test_examples.py  test_init.py  test_journal.py  test_logger.py  test_parser.py  test_utils.py
tests/test_models/: test_action.py  test_communication.py  test_events.py  test_generic.py  test_llm_usage.py  test_problem.py  test_propose_task.py  test_role.py  test_role_with_actions.py  test_task.py  test_template_manager.py  test_tool.py  test_transmission.py  test_utils.py  test_with_briefing.py  test_with_briefing_and_json_example.py  (+11 more)
(+95 files in other folders)
