[package]
name = "fabricatio"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.2", features = ["extension-module"] }

reqwest = { version = "0.13.1" }
tar = "0.4.44"
flate2 = "1.1.5"
clap = { version = "4.5.53", features = ["derive", "env"] }
colored = "3.0.0"
chrono = "0.4.42"
indicatif = "0.18.3"
glob = "0.3.3"
octocrab = { version = "0.49.5" }
once_cell = "1.21.3"
thiserror = "2.0.17"

tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
human-units = { version = "0.5.3", features = ["iec-units"] }
walkdir = "2.5.0"
fabricatio-constants = { path = "crates/fabricatio-constants" }

[build-dependencies]
pyo3-build-config = "0.27.2"


[workspace]
members = [
    "crates/*",
    "packages/fabricatio-typst",
    "packages/fabricatio-rag",
    "packages/fabricatio-core",
    "packages/fabricatio-memory",
    "packages/fabricatio-anki",
    "packages/fabricatio-tool",
    "packages/fabricatio-locale",
    "packages/fabricatio-thinking",
    "packages/fabricatio-agent",
    "packages/fabricatio-diff",
    "packages/fabricatio-novel",
    "packages/fabricatio-checkpoint",
    "packages/fabricatio-webui",
]



[workspace.package]
authors = ["Whth <zettainspector@foxmail.com>"]
license-file = "LICENSE"
repository = "https://github.com/Whth/fabricatio"
