[package]
name = "fabricatio"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.29.0", features = ["extension-module"] }

reqwest = { version = "0.13.4", features = ["rustls"] }
tar = "0.4.46"
flate2 = "1.1.9"
clap = { version = "4.6.1", features = ["derive", "env"] }
colored = "3.1.1"
chrono = "0.4.45"
indicatif = "0.18.6"
glob = "0.3.3"
octocrab = { version = "0.53.1" }
once_cell = "1.21.4"
thiserror = "2.0.18"

tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
human-units = { version = "0.5.3", features = ["iec-units"] }
walkdir = "2.5.0"
fabricatio-constants = { path = "crates/fabricatio-constants" }
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs", "logging", "std", "tls12"] }

[build-dependencies]
pyo3-build-config = "0.29.0"


[workspace]
members = [
    "crates/*",
    "packages/fabricatio-typst",
    "packages/fabricatio-core",
    "packages/fabricatio-memory",
    "packages/fabricatio-anki",
    "packages/fabricatio-tool",
    "packages/fabricatio-locale",
    "packages/fabricatio-thinking",
    "packages/fabricatio-agent",
    "packages/fabricatio-diff",
    "packages/fabricatio-novel",
    "packages/fabricatio-checkpoint",
    "packages/fabricatio-webui",
    "packages/fabricatio-workspace",
    "packages/fabricatio-tei",
    "packages/fabricatio-lancedb",
    "packages/fabricatio-sandbox",
    "packages/fabricatio-skill",
]

[workspace.dependencies]
fabricatio-logger = { path = "crates/fabricatio-logger" }
mcp-manager = { path = "crates/mcp-manager" }
signify = { path = "crates/signify" }
error-mapping = { path = "crates/error-mapping" }



[workspace.package]
authors = ["Whth <zettainspector@foxmail.com>"]
license-file = "LICENSE"
repository = "https://github.com/Whth/fabricatio"


