[project]
name = "fabricatio"
version = "0.1.0"
description = "A multi-agent framework."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Whth", email = "zettainspector@foxmail.com" }
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Framework :: AsyncIO",
    "Framework :: Pydantic :: 2",
    "Typing :: Typed",
]
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.11",
    "aiomultiprocess>=0.9.1",
    "appdirs>=1.4.4",
    "asyncio>=3.4.3",
    "litellm>=1.60.0",
    "loguru>=0.7.3",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
    "pymitter>=1.0.0",
    "rich>=13.9.4",
]

[project.optional-dependencies]
cli = [
    "typer>=0.15.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"

[[tool.uv.index]]
url = "https://mirrors.huaweicloud.com/repository/pypi/simple"

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"

[[tool.uv.index]]
url = "https://mirrors.bfsu.edu.cn/pypi/web/simple"
default = true
