[project]
name = "fabricatio"
version = "0.2.0-dev.9"
description = "A LLM multi-agent framework."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Whth", email = "zettainspector@foxmail.com" }
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Framework :: AsyncIO",
    "Framework :: Pydantic :: 2",
    "Typing :: Typed",
]
keywords = [
    "ai",
    "agents",
    "multi-agent",
    "llm",
]



requires-python = ">=3.12"
dependencies = [
    "appdirs>=1.4.4",
    "asyncio>=3.4.3",
    "code2prompt",
    "gitpython>=3.1.44",
    "litellm>=1.60.0",
    "loguru>=0.7.3",
    "magika>=0.5.1",
    "orjson>=3.10.15",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
    "pymitter>=1.0.0",
    "questionary>=2.1.0",
    "regex>=2024.11.6",
    "rich>=13.9.4",
]


[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
module-name = "fabricatio._rust"
data = "extra"
[dependency-groups]
dev = [
    "maturin>=1.8.2",
    "maturin-import-hook>=0.2.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
    "pytest-env>=1.1.5",
    "pytest-flake8>=1.3.0",
    "pytest-mock>=3.14.0",
    "pytest-rerunfailures>=15.0",
    "pytest-xdist>=3.6.1",
    "ruff>=0.9.4",
    "uv>=0.5.29",
    "viztracer>=1.0.2",
]
rag = [
    "faiss-cpu>=1.10.0",
    "pymilvus>=2.5.4",
]

full = [
    "fabricatio[rag]",
]


[tool.ruff]
include = ["pyproject.toml", "python/fabricatio/*.py", "examples/*.py"]
line-length = 120
target-version = "py312"
[tool.ruff.format]
quote-style = "double" # Like Black, use double quotes for strings.

[tool.ruff.lint]
select = [
    "F", # Pyflakes
    "I", # isort
    "N", # pep8-naming
    "D", # pydocstyle
    "W", # warnings
    "ANN", # flake8-annotations
    "ASYNC", # flake8-async
    "S", # flake8-bandit
    "BLE", # flake8-blind-except
    "C90", # flake8-complexity
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "T10", # flake8-debugger
    "T20", # flake8-print
    "PYI", # flake8-pyi
    "PT", # flake8-pytest-style
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "TC", # flake8-type-checking
    "PTH", # flake8-use-pathlib
    "PLC", # convention
    "PLE", # error
    "PLR", # refactoring
    "PLW", # warning
    "RUF", # Ruff-specific rules
]
ignore = [
    "S101",
    "ANN401",
    "ANN003",
    "D100",
    "PYI063",
    "ASYNC109"
]
[tool.ruff.lint.pydocstyle]
convention = "google"
ignore-decorators = ["typing.overload"]
[tool.ruff.lint.pylint]
max-args = 15

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.uv.sources]
code2prompt = { git = "https://github.com/mufeedvh/code2prompt" }

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"

[[tool.uv.index]]
url = "https://mirrors.huaweicloud.com/repository/pypi/simple"

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"

[[tool.uv.index]]
url = "https://mirrors.bfsu.edu.cn/pypi/web/simple"
default = true

