[package]
name = "error-mapping"
version = "0.2.3"
edition = "2024"
authors.workspace = true
license-file.workspace = true

[dependencies]
epub-builder = { version = "0.8.2", default-features = false, optional = true, features = ["libzip"] }
git2 = { version = "0.20.3", default-features = false, optional = true }
pythonize = { version = "0.27.0", default-features = false, optional = true }
pyo3 = { version = "0.27.2", default-features = false }
serde_json = { version = "1.0.148", default-features = false, optional = true }
handlebars = { version = "6.4.0", default-features = false, optional = true }
biblatex = { version = "0.11.0", default-features = false, optional = true }
validator = { version = "0.20.0", default-features = false, optional = true }
tonic = { version = "0.14.2", default-features = false, optional = true, features = ["server"] }
http = { version = "1.4.0", default-features = false, optional = true }
cfg-if = "1.0.4"
tantivy = { version = "0.25.0", default-features = false, optional = true }
mcp-manager = { path = "../mcp-manager", default-features = false, optional = true }


[features]
default = ["std"]
git2 = ["dep:git2"]
epub-builder = ["dep:epub-builder"]
pythonize = ["dep:pythonize"]
serde_json = ["dep:serde_json"]
handlebars = ["dep:handlebars"]
biblatex = ["dep:biblatex"]
validator = ["dep:validator"]
tonic = ["dep:tonic"]
http = ["dep:http"]
tantivy = ["dep:tantivy"]
mcp-manager = ["dep:mcp-manager"]
pyo3_extract = []
std = []


