[package]
name = "error-mapping"
version = "0.2.10"
edition = "2024"
authors.workspace = true
license-file.workspace = true

[dependencies]
epub-builder = { version = "0.8.3", default-features = false, optional = true, features = ["libzip"] }
git2 = { version = "0.20.4", default-features = false, optional = true }
pythonize = { version = "0.28.0", default-features = false, optional = true }
pyo3 = { version = "0.28.3", default-features = false }
serde_json = { version = "1.0.149", default-features = false, optional = true }
handlebars = { version = "6.4.0", default-features = false, optional = true }
biblatex = { version = "0.11.0", default-features = false, optional = true }
validator = { version = "0.20.0", default-features = false, optional = true }
tonic = { version = "0.14.5", default-features = false, optional = true, features = ["server"] }
http = { version = "1.4.0", default-features = false, optional = true }
cfg-if = "1.0.4"
tantivy = { version = "0.26.1", default-features = false, optional = true }
mcp-manager = { path = "../mcp-manager", default-features = false, optional = true }
lancedb = { version = "0.27.2", default-features = false, optional = true }
strum = { version = "0.28.0", default-features = false, optional = true }
thryd = { path = "../thryd", default-features = false, optional = true }
postcard = { version = "1.1.3", default-features = false, optional = true }
arrow-schema = { version = "<=57.3.0", default-features = false, optional = true }
llm_json = { version = "1.0.3", default-features = true, optional = true }
regex = { version = "1.12.3", default-features = false, optional = true }
rho-hashline = { version = "0.5", default-features = false, optional = true }

[features]
default = ["std"]
regex = ["dep:regex"]
llm_json = ["dep:llm_json"]
arrow-schema = ["dep:arrow-schema"]
strum = ["dep:strum"]
lancedb = ["dep:lancedb"]
git2 = ["dep:git2"]
epub-builder = ["dep:epub-builder"]
pythonize = ["dep:pythonize"]
serde_json = ["dep:serde_json"]
handlebars = ["dep:handlebars"]
biblatex = ["dep:biblatex"]
validator = ["dep:validator"]
tonic = ["dep:tonic"]
http = ["dep:http"]
tantivy = ["dep:tantivy"]
mcp-manager = ["dep:mcp-manager"]
thryd = ["dep:thryd"]
postcard = ["dep:postcard"]
rho-hashline = ["dep:rho-hashline"]
pyo3_cast = []

std = []


