[package]
name = "fabricatio-config"
version = "0.3.1"
edition = "2024"
readme = "README.md"

authors.workspace = true
license-file.workspace = true

[dependencies]
pyo3-stub-gen = "0.20.0"
pyo3 = "0.28.2"
fabricatio-constants = { path = "../fabricatio-constants" }

pythonize = "0.28.0"
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
macro-utils = { path = "../macro-utils" }
dotenvy = "0.15.7"
figment = { version = "0.10.19", features = ["env", "toml"] }
validator = { version = "0.20.0", features = ["derive"] }

thryd = { path = "../thryd", features = ["pyo3", "pystub"] }
