[package]
name = "fabricatio-constants"
version = "0.2.2"
edition = "2024"
authors.workspace = true
license-file.workspace = true
repository = "https://github.com/Whth/fabricatio"
description = "This crate provides constant values used throughout the fabricatio application."
readme = "README.md"
[dependencies]
directories-next = "2.0.0"
once_cell = "1.21.3"


