[package]
name = "fabricatio-logger"
version = "0.2.4"
edition = "2024"
readme = "README.md"
authors.workspace = true
license-file.workspace = true

[dependencies]
pyo3 = "0.28.3"
chrono = "0.4.44"
tracing-subscriber = { version = "0.3.23", default-features = false, features = ["env-filter", "chrono"] }
tracing = "0.1.44"
tracing-appender = "0.2.5"
fabricatio-constants = { path = "../fabricatio-constants" }
pyo3-stub-gen = { version = "0.22.1", optional = true }
strum = { version = "0.28.0", features = ["derive"] }



[features]

stubgen = ["dep:pyo3-stub-gen"]



