[package]
name = "fabricatio-router"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
thryd = { path = "../thryd", features = ["pyo3"] }
fabricatio-config = { path = "../fabricatio-config" }
fabricatio-logger = { path = "../fabricatio-logger" }
fabricatio-constants = { path = "../fabricatio-constants" }
error-mapping = { path = "../error-mapping", features = ["thryd", "std"] }
pyo3 = { version = "0.28.3" }
pyo3-async-runtimes = { version = "0.28.0", features = ["tokio-runtime"] }
pyo3-stub-gen = "0.22.1"
futures = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[features]
default = ["pyo3/extension-module"]
stubgen = ["thryd/stubgen", "fabricatio-logger/stubgen", "fabricatio-config/stubgen"]
