[package]
name = "fabricatio-stubgen"
version = "0.1.2"
edition = "2024"
authors.workspace = true
license-file.workspace = true

[dependencies]
pyo3-stub-gen = "0.19.0"
fabricatio-core = { path = "../../packages/fabricatio-core", default-features = false, optional = true }
fabricatio-memory = { path = "../../packages/fabricatio-memory", default-features = false, optional = true }
fabricatio-diff = { path = "../../packages/fabricatio-diff", default-features = false, optional = true }
fabricatio-checkpoint = { path = "../../packages/fabricatio-checkpoint", default-features = false, optional = true }
fabricatio-rag = { path = "../../packages/fabricatio-rag", default-features = false, optional = true }



[build-dependencies]
pyo3-build-config = "0.28.2"



[features]
all = ["fabricatio-core/stubgen",
    "fabricatio-memory/stubgen",
    "fabricatio-diff/stubgen",
    "fabricatio-checkpoint/stubgen",
    "fabricatio-rag/stubgen"
]


core = ["fabricatio-core/stubgen"]
memory = ["fabricatio-memory/stubgen"]
diff = ["fabricatio-diff/stubgen"]
checkpoint = ["fabricatio-checkpoint/stubgen"]
rag = ["fabricatio-rag/stubgen"]

default = []
