[package]
name = "fabricatio-stubgen"
version = "0.1.4"
edition = "2024"
authors.workspace = true
license-file.workspace = true

[dependencies]
pyo3-stub-gen = "0.21.0"
fabricatio-core = { path = "../../packages/fabricatio-core", default-features = false, optional = true }
fabricatio-memory = { path = "../../packages/fabricatio-memory", default-features = false, optional = true }
fabricatio-diff = { path = "../../packages/fabricatio-diff", default-features = false, optional = true }
fabricatio-checkpoint = { path = "../../packages/fabricatio-checkpoint", default-features = false, optional = true }
fabricatio-rag = { path = "../../packages/fabricatio-rag", default-features = false, optional = true }
fabricatio-workspace = { path = "../../packages/fabricatio-workspace", default-features = false, optional = true }



[features]
all = [

    "core",
    "memory",
    "diff",
    "checkpoint",
    "rag",
    "workspace"

]


core = ["fabricatio-core/stubgen"]
memory = ["fabricatio-memory/stubgen"]
diff = ["fabricatio-diff/stubgen"]
checkpoint = ["fabricatio-checkpoint/stubgen"]
rag = ["fabricatio-rag/stubgen"]
workspace = ["fabricatio-workspace/stubgen"]

default = []
